--- a/shard.yml
+++ b/shard.yml
@@ -9,17 +9,17 @@ license: MIT
 dependencies:
   db:
     github: crystal-lang/crystal-db
-    version: ~> 0.7.0
+    version: ~> 0.8.0
 
 development_dependencies:
   mysql:
     github: crystal-lang/crystal-mysql
-    version: 0.9.0
+    version: 0.10.0
 
   pg:
-    github: will/crystal-pg
-    version: 0.19.0
+    github: bcardiff/crystal-pg
+    branch: 0.8.0
 
   sqlite3:
     github: crystal-lang/crystal-sqlite3
-    version: 0.14.0
+    version: 0.15.0
